# promptproof

./: .gitignore  README.md  pyproject.toml
attacks/scenarios/: jailbreak.yaml  pii-leak.yaml  prompt-injection.yaml  tool-abuse.yaml
configs/: demo_after.bak.yaml  demo_after.yaml  demo_before.yaml  sample_target.bak.yaml  sample_target.yaml
promptproof/: cache.py  cli.py  metrics.py  utils.py
promptproof.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
promptproof/attacks/: generator_llm.py  registry.py
promptproof/filters/: runtime.py
promptproof/judge/: heuristics.py  model_critic.py
promptproof/mitigations/: io_filters.py  prompt_patch.py
promptproof/report/: html.py
promptproof/runner/: ollama.py
promptproof/targets/: adapters.py
promptproof/targets/sample_echo/: app.py
scripts/: demo_fast.bat  run_after.ps1  run_before.ps1
